@@ -1,4 +1,4 @@
-# Copyright (C) 2008-2010 eBox Technologies S.L.
+# Copyright (C) 2008-2011 eBox Technologies S.L.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2, as
@@ -21,6 +21,9 @@
 #
 #     http://collectd.org/documentation/manpages/collectd-perl.5.shtml
 #
+#    Based on flexible alert frequency, if a notification is set to
+#    persist, then the alerts must be sent after X seconds happened
+#    the same notification level
 
 package EBox::Collectd::Notificate;
 
@@ -32,18 +35,45 @@ use warnings;
 #use Fcntl;
 
 # External uses
-use File::Temp;
 use Collectd qw(:all);
 use Data::Dumper;
+use File::Temp;
+use File::Slurp;
+use JSON;
 
 # Constants
 # Set it fixed not to include Zentyal packages
 use constant EVENTS_INCOMING_DIR       => '/var/run/ebox/events/incoming/';
 use constant EVENTS_INCOMING_READY_DIR => EVENTS_INCOMING_DIR . 'ready/';
 use constant EVENTS_FIFO               => '/var/lib/ebox/tmp/events-fifo';
+use constant NOTIFICATION_CONF         => '/var/lib/zentyal/conf/monitor/notif.conf';
 use constant EBOX_USER                 => 'ebox';
 
+our %persistConf = ();
+
+plugin_register(TYPE_INIT, 'init', 'ebox_init_notify');
 plugin_register(TYPE_NOTIF, 'notificate', 'ebox_notify');
+
+# Procedure: ebox_init_notify
+#
+#     Read the notification configuration in JSON format
+#
+#     This file is written by monitor module. Content:
+#
+#       { 'plugin' => { 'plugin_instance' => { 'type' => {
+#       'type_instance' => { 'level' => { 'first' => 0, 'after' => n
+#       }}}}}}
+#
+sub ebox_init_notify
+{
+    if ( -r NOTIFICATION_CONF ) {
+        my $content = File::Slurp::read_file(NOTIFICATION_CONF);
+        %persistConf = %{decode_json($content)};
+    }
+
+    return 1;
+
+}
 
 # Procedure: ebox_notify
 #
@@ -67,20 +97,45 @@ sub ebox_notify
 {
     my ($not) = @_;
 
+    my $level  = 'fatal';
+    my $aLevel = 'info';
+    if ( $not->{severity} == NOTIF_FAILURE ) {
+        $level  = 'error';
+        $aLevel = 'warn';
+    } elsif ( $not->{severity} == NOTIF_WARNING ) {
+        $level  = 'warn';
+        $aLevel = 'error';
+    } else {
+        $level = 'info';
+    }
+
+    $not->{plugin_instance} = '' unless defined($not->{plugin_instance});
+    $not->{type_instance}   = '' unless defined($not->{type_instance});
+
+    if ( exists $persistConf{$not->{plugin}}->{$not->{plugin_instance}}->{$not->{type}}->{$not->{type_instance}} ) {
+        my $measureConf  = $persistConf{$not->{plugin}}->{$not->{plugin_instance}}->{$not->{type}}->{$not->{type_instance}}->{$level};
+        my $aMeasureConf = $persistConf{$not->{plugin}}->{$not->{plugin_instance}}->{$not->{type}}->{$not->{type_instance}}->{$aLevel};
+        if ( $measureConf->{first} ) {
+            if ( $measureConf->{first} + $measureConf->{after} < $not->{time} ) {
+                $measureConf->{first} = 0;
+            } else {
+                # Nothing new under the sun
+                return 1;
+            }
+        } else {
+            # First valid value
+            $measureConf->{first}  = $not->{time};
+            # Switching from this level to the contrary (clear counters)
+            $aMeasureConf->{first} = 0;
+            return 1;
+        }
+    }
+
     my $src = 'monitor-' . $not->{plugin};
     $src .= '-' . $not->{plugin_instance} if (defined($not->{plugin_instance})
                                               and $not->{plugin_instance} ne '');
     $src .= '-' . $not->{type} if ( $not->{type} ne $not->{plugin} );
     $src .= '-' . $not->{type_instance} if ($not->{type_instance} ne '');
-
-    my $level = 'fatal';
-    if ( $not->{severity} == NOTIF_FAILURE ) {
-        $level = 'error';
-    } elsif ( $not->{severity} == NOTIF_WARNING ) {
-        $level = 'warn';
-    } else {
-        $level = 'info';
-    }
 
     my $evt = {
         message => $not->{message},
